fix: Increase the z-index of nav bar

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,7 @@
 .jk-wiki {
+  .nav {
+    z-index: 10;
+  }
   .nav-section {
     position: sticky;
     top: 0;
