--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,5 +1,5 @@
 .basic-button {
-  width: 90px;
+  min-width: 90px;
   height: 26px;
   background: #1c1c1c;
   border-radius: 2px;
@@ -17,7 +17,7 @@
     letter-spacing: 0em;
     text-align: left;
     color: #ffffff;
-    width: 48px;
+    // width: 48px;
   }
   &.white {
     background: #ffffff;
